# serializer version: 1
# name: TestEdit.test_control[-False]
  dict({
    'contributors': list([
    ]),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'id': 'foo',
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'otu_count': 0,
    'unbuilt_change_count': 0,
    'user': dict({
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'administrator': False,
        'handle': 'zclark',
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: TestEdit.test_control[-False].1
  dict({
    '_id': 'foo',
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'internal_control': '',
    'name': 'Tester',
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: TestEdit.test_control[-True]
  dict({
    'contributors': list([
    ]),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'id': 'foo',
    'internal_control': dict({
      'id': 'baz',
    }),
    'latest_build': None,
    'name': 'Tester',
    'otu_count': 0,
    'unbuilt_change_count': 0,
    'user': dict({
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'administrator': False,
        'handle': 'zclark',
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: TestEdit.test_control[-True].1
  dict({
    '_id': 'foo',
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'internal_control': '',
    'name': 'Tester',
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: TestEdit.test_control[None-False]
  dict({
    'contributors': list([
    ]),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'id': 'foo',
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'otu_count': 0,
    'unbuilt_change_count': 0,
    'user': dict({
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'administrator': False,
        'handle': 'zclark',
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: TestEdit.test_control[None-False].1
  dict({
    '_id': 'foo',
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'internal_control': dict({
      'id': 'bar',
    }),
    'name': 'Tester',
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: TestEdit.test_control[None-True]
  dict({
    'contributors': list([
    ]),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'id': 'foo',
    'internal_control': dict({
      'id': 'baz',
    }),
    'latest_build': None,
    'name': 'Tester',
    'otu_count': 0,
    'unbuilt_change_count': 0,
    'user': dict({
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'administrator': False,
        'handle': 'zclark',
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: TestEdit.test_control[None-True].1
  dict({
    '_id': 'foo',
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'internal_control': dict({
      'id': 'bar',
    }),
    'name': 'Tester',
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: TestEdit.test_control[baz-False]
  dict({
    'contributors': list([
    ]),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'id': 'foo',
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'otu_count': 0,
    'unbuilt_change_count': 0,
    'user': dict({
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'administrator': False,
        'handle': 'zclark',
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: TestEdit.test_control[baz-False].1
  dict({
    '_id': 'foo',
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'internal_control': 'baz',
    'name': 'Tester',
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: TestEdit.test_control[baz-True]
  dict({
    'contributors': list([
    ]),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'id': 'foo',
    'internal_control': dict({
      'id': 'baz',
    }),
    'latest_build': None,
    'name': 'Tester',
    'otu_count': 0,
    'unbuilt_change_count': 0,
    'user': dict({
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'administrator': False,
        'handle': 'zclark',
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: TestEdit.test_control[baz-True].1
  dict({
    '_id': 'foo',
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'internal_control': 'baz',
    'name': 'Tester',
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: TestEdit.test_reference_name
  dict({
    'contributors': list([
    ]),
    'data_type': 'genome',
    'id': 'foo',
    'internal_control': None,
    'latest_build': None,
    'name': 'Bar',
    'otu_count': 0,
    'unbuilt_change_count': 0,
    'user': dict({
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'administrator': False,
        'handle': 'zclark',
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: TestEdit.test_reference_name.1
  dict({
    '_id': 'foo',
    'data_type': 'genome',
    'internal_control': dict({
      'id': 'bar',
    }),
    'name': 'Bar',
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: TestEdit.test_reference_name.2
  list([
    dict({
      '_id': 'baz',
      'reference': dict({
        'id': 'foo',
        'name': 'Bar',
      }),
    }),
    dict({
      '_id': 'boo',
      'reference': dict({
        'id': 'foo',
        'name': 'Bar',
      }),
    }),
  ])
# ---
